# cl_server_compute

./: .gitignore  INTERNALS.md  README.md  pyproject.toml  pyrightconfig.json
alembic/: README  env.py
alembic/versions/: 2fb4f2bb3087_add_service_config_table.py  3bf8b22bb6c4_initial_schema.py
src/compute/: __init__.py  auth.py  capability_manager.py  compute_server.py  compute_worker.py  config_service.py  database.py  migrate.py  models.py  routes.py  schemas.py  service.py  task_server.py  utils.py  worker.py
src/task_server/: __init__.py  auth.py  capability_broadcaster.py  main.py  plugins.py  schemas.py  service.py  task_server.py  worker.py
tests/: README.md  __init__.py  conftest.py  test_auth.py  test_capability_broadcaster.py  test_capability_manager.py  test_database.py  test_plugins.py  test_routes.py  test_schemas.py  test_service.py  test_task_server.py  test_worker.py
